[package]
name = "pirusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "5.0.0"
reqwest = { version = "0.11", features = ["blocking", "json", "socks", "gzip"] }
scraper = "0.17.1"
serde_json = "1.0"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["crossterm-backend"]
